--- a/src/scss/components/_profile.scss
+++ b/src/scss/components/_profile.scss
@@ -1,7 +1,3 @@
-.profile {
-  display: none;
-}
-
 .profile__links {
   color: $secondary;
   margin-top: 1rem;
